# formulario-fulldev

./: README.md
formulario-fulldev/: app.py  pyproject.toml
formulario-fulldev/model/: conexao.py  database.py
formulario-fulldev/templates/: criar_formulario.html  dashboard.html  login.html  logout.html  main.html
