[tool.poetry]
name = "formulario-fulldev"
version = "0.1.0"
description = ""
authors = ["Lucas Moura <l.conceicao@aluno.ifsp.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
py-mysql-connector = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
